# aoj-mr-studio

./: .gitignore  LICENSE  README.md  aoj-mr-studio.spec  build_exe.ps1  pyproject.toml  requirements.txt  run.bat
.github/workflows/: release.yml
aoj_mr_studio/: __init__.py  __main__.py  adb_path.py  adb_sync.py  app.py  component_editor.py  component_schema.py  config.py  glb_nodes.py  magazine_config.py  magazine_pdf.py  magazine_preview.py  manual.py  manual_renderer.py  package_actions.py  package_defaults.py  package_editor.py  packages.py  placement_editor.py  placement_schema.py  theme.py  yaml_model.py
aoj_mr_studio/data/: MR_USER_GUIDE.en.md  MR_USER_GUIDE.pt.md
docs/: schema-v1.md
scripts/: copy-adb.ps1  deploy.sh
tests/: test_adb_path.py  test_adb_shell.py  test_component_schema.py  test_glb_nodes.py  test_magazine_config.py  test_magazine_pdf.py  test_magazine_preview.py  test_manual.py  test_package_actions.py  test_package_editor.py  test_placement_schema.py  test_yaml_model.py
