[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aoj-mr-studio"
version = "0.1.0"
description = "Editor for Age of Joy MR custom object packages (object.yaml) with Quest ADB sync"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AOJ MR Studio contributors" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
aoj-mr-studio = "aoj_mr_studio.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aoj_mr_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
